# fun-rust-experiments

./: README.md
awesome-cli-list/: .gitignore  Cargo.toml  Config.toml  README.md
awesome-cli-list/not-working/: main copy.rs  parse_debug.txt  prompt-for-awesome-cli.txt
awesome-cli-list/src/: main.rs
git-awesome-tui/: Cargo.toml  README.me  awesome.json  md-2-json copy.py  md-2-json.py
git-awesome-tui/src/: data.rs  main.rs  search.rs  ui.rs
task-manager-tui/: Cargo.toml  tasks.db
task-manager-tui/src/: app.rs  config.rs  database.rs  db.rs  main.rs  tui.rs
